# platform-ui/src/app/portal/community/models/UIItemWithRecords.ts
@@ -1,9 +1,0 @@
-import { UIBorrowRecord } from "./UIBorrowRecord";
-import { UIItem } from "./UIItem";
-
-
-export type UIItemWithRecords = UIItem & {
-    borrowRecords: UIBorrowRecord[];
-    isBookedToday: boolean;
-    myBooking: UIBorrowRecord | undefined;
-};
