# platform-ui/src/app/portal/community/models/UIItemsPagination.ts
@@ -1,0 +1,9 @@
+import { UIItem } from "./UIItem";
+
+export interface UIItemsPagination {
+    totalPages: number;
+    totalItems: number;
+    currentPage: number;
+    itemsPerPage: number;
+    items: UIItem[];
+}
